--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "react-icons-kit": "^2.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.x",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^3.0.1",
     "react-to-print": "^2.14.7",
     "source-map-loader": "^3",
     "styled-components": "^5.2.1",
     "styled-system": "5.1.5"
   },
   "devDependencies": {
-    "concurrently": "4.1.1",
+    "concurrently": "^8.2.2",
     "cpx": "1.5.0",
-    "gh-pages": "3.2.3"
+    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
